# panelcast

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  LICENSE  MODEL_CARD.md  README.md  codecov.yml  pixi.toml  pyproject.toml  terminology_baseline.json  typing_baseline.json
.audit/: COMPARISON_CONFIG.md  REVIEW_RESPONSE.md  STATUS.md  analyze_n_exponent.py  baseline_data_hashes.txt  baseline_metrics.json  n_exponent_posterior_analysis.md  preflight_audit_2026-07-09.md  release_results.json
.audit/beta_ceiling/: screening.md  screening_metrics.json
.audit/fair_eval_0131/: SUMMARY.md  baseline_comparison.csv  baseline_comparison.json  build_evidence.py  fair_eval.json  reproduce.py
.audit/genre_pooling/: covariates_only_r2.md  gate_on_screening.md  metrics_gate_off.json  metrics_gate_on.json
.audit/genre_pooling/multiseed/: VERDICT.md  seed43_gate_off_metrics.json  (+3 more)
.audit/model_v2_bakeoff/: comparison.json  comparison.md
.audit/point_accuracy_gap/: column_drop_metrics.json  estimator_comparison.json  estimator_comparison.md  gbm_feature_ablation.md  stacking_block_on_metrics.json  stacking_screening.md
.audit/preflight_validation/: preflight_validation.json
.audit/select_aoty_011/: ledger.json  report.json  report.md
.audit/select_aoty_012/: GPU_VALIDATION.md  ledger_ladder.json  ledger_parallel.json
.audit/select_entityobs_confirm/: SUMMARY.md
.audit/transform_latent_bakeoff/: MULTISEED.md  comparison.json  comparison.md
.audit/verdict_ledger/: LEDGER.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  claude-review.yml  claude.yml  nightly.yml  release.yml  wheels.yml
citations/: CITATION_NOTES.md  citations.bib
configs/: bakeoff_v2_gates.yaml  base.yaml  dev.yaml  diagnostic.yaml  publication.yaml  quick.yaml  select.yaml
configs/datasets/: README.md  aero.yaml  aoty_full.yaml  elections.yaml
docs/: API.md  ARTIFACTS.md  BASELINES.md  CLI.md  CONFIG_SPEC.md  DATA_CONTRACT.md  DATA_LINEAGE.md  DECISIONS_TO_LOCK.md  DEV_SETUP.md  EVALUATION_PROTOCOL.md  EXTENSIBILITY.md  GETTING_STARTED.md  GLOSSARY.md  GPU_SETUP.md  LEAKAGE_CONTROLS.md  LEGACY_MAPPING.md  LIKELIHOOD_CANDIDATES.md  LINEAGE.md  NEW_DOMAIN_PLAYBOOK.md  PIPELINE_PLAN.md  PIPELINE_RUNBOOK.md  PORTING.md  PROJECT_STRUCTURE.md  RAW_SCHEMA_SNAPSHOT.md  SENSITIVITY_MATRIX.md  TEST_MATRIX.md  TEST_PLAN.md  WHAT_CARRIES_THE_SIGNAL.md
docs/decisions/: DECISIONS.md  entity_overdispersion.md  what_carries_the_signal.md
docs/figures/: aoty_pipeline_dark.dot  aoty_pipeline_light.dot  aoty_pipeline_transparent.dot
docs/lineage/: DATA_LINEAGE_DETAILED.md
examples/: quickstart.ipynb
examples/aerospace/: descriptor.yaml  flights.csv
examples/elections/: ATTRIBUTION.md  descriptor.yaml  results.csv
scripts/: bakeoff_likelihoods.py  bakeoff_transform_latent.py  benchmark_gpu.py  build_comprehensive_csv.py  bump_version.py  check_jax.py  debug_info_criteria.py  execute_notebook.py  experiment_entity_overdispersion.py  experiment_likelihood_ppc.py  experiment_logit_transform.py  experiment_n_exponent_grid.py  experiment_preflight_validation.py  experiment_sigma_artist_mixing.py  generate_aero_example.py  generate_trajectories.py  make_aoty_subset.py  predict_artist.py  predict_entity.py  run_benchmark.sh  run_benchmark_wsl.sh  run_publication.ps1  run_publication.sh  run_tests.ps1  run_tests.sh  terminology_ratchet.py  test_gpu.py  typing_ratchet.py  verify_gpu.py
src/panelcast/: __init__.py  cli.py  doctor.py  model_preflight.py  model_preflight_data.py  paths.py
tests/: README.md  conftest.py
tests/e2e/: __init__.py  conftest.py  test_domain_portability.py  test_full_pipeline.py  test_smoke.py
tests/fixtures/: README.md  raw_all_albums_full.csv
tests/helpers/: aero_data.py
tests/integration/: conftest.py  test_data_features.py  test_feature_golden_hashes.py  test_gbm_offset_gate_on.py  test_model_evaluation.py  test_n_reviews_flow.py  test_prepare_golden_hashes.py
tests/unit/: test_aero_example.py  test_auto_priors.py  test_backtest.py  test_bump_version.py  test_caged_chain_config.py  test_calibration.py  test_calibration_expanded.py  test_calibration_new.py  test_cli.py  test_cli_conveniences.py  test_cli_coverage.py  test_cli_doctor.py  test_cli_error_ux.py  test_cli_flags.py  test_cli_new.py  test_cli_orchestrator_stages.py  test_cli_orchestrator_stages_coverage.py  test_cli_pipeline.py  test_cli_preflight.py  test_cli_presets_diagnose.py  test_cli_runs_reproduce.py  test_cli_runs_show_diff.py  test_cli_runs_verify.py  test_config_loader.py  test_conformal.py  test_cv.py  test_data_manifests.py  test_data_validation.py  test_descriptor_model_facts.py  test_diagnostics.py  test_diagnostics_expanded.py  test_diagnostics_new.py  test_docs_lineage_guard.py  test_error_decomposition.py  test_evaluation_cv_expanded.py  test_failure_epilogue.py  test_fair_eval_evidence.py  test_feature_album_type.py  test_feature_artist_reputation.py  test_feature_base.py  (+64 more)
(+363 files in other folders)
